# SecuArchive

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-gitee.yml  build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AIChat.tsx  BackupManager.tsx  FileShare.tsx  Header.tsx  Layout.tsx  PluginManager.tsx  ProjectSidebar.tsx  ReportList.tsx  ReportPreview.tsx  Settings.tsx  Sidebar.tsx  Splitter.tsx
src/stores/: aiStore.ts  pluginStore.ts  reportStore.ts
src/types/: index.ts  plugin.ts
